--- a/_pages/team/_posts/2024-10-01-mariam.md
+++ b/_pages/team/_posts/2024-10-01-mariam.md
@@ -1,20 +1,21 @@
 ---
 layout: member
 category: student
-title: Researcher Name
-image: researcher.png
-role: PhD Student
-permalink: 'team/researcher-name'
+title: Mariam Barakat
+image: mariam.png
+role: Master’s Student in NLP
+permalink: 'team/mariam'
 social:
-    twitter: https://twitter.com/
-    linkedin: https://www.linkedin.com/
-    google-scholar: https://scholar.google.fr/
-    github: https://github.com/
+    twitter: https://twitter.com/MariamBara68478
+    linkedin: https://www.linkedin.com/in/mariam-barakat
+    google-scholar: https://scholar.google.co.uk/citations?user=KemdltQAAAAJ&hl=en‪
+    github: https://github.com/Myriam2002
     website:
-    orcid: https://orcid.org/
-    research-gate: https://www.researchgate.net/
+    orcid: https://orcid.org/0009-0001-5112-675X
+    research-gate: https://www.researchgate.net/profile/Mariam-Barakat-6?ev=hdr_xprf
 education:
- - Education
+ - Master’s in Natural Language Processing, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), UAE(ongoing)
+ - Bachelor’s degree in Computer Science from Nile University, Egypt 
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Mariam Barakat is a second-year Master’s student in the NLP department at MBZUAI, supervised by Professor Ekaterina Kochmar. Her research focuses on educational NLP, with a particular interest in analogies and critical question generation. She is passionate about leveraging AI to make learning more engaging, personalized, and effective. Mariam is also the co-founder of Edulga, an AI-powered platform designed to accelerate global development in education and human capital by transforming scattered knowledge into personalized pathways. Her mission is to contribute to building the next generation of educational systems that empower learners worldwide
